--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/login.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
 <div class="container-fluid">
 
 	<div class="text-center p-5">
-		<h2 class="font-weight-bold text-primary">Login Admin Page</h2>
+		<h2 class="font-weight-bold text-primary">Admin Login Page</h2>
 	</div>
 	
 	<form th:action="@{/login}" method="post" style="max-width: 450px; margin: 0 auto">
