--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/checkout.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/checkout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="header :: page_head('Cart')"></head>
+<head th:replace="header :: page_head('Checkout')"></head>
 <body>
 
 <div th:replace="navbar :: navbar"></div>
