--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/product_detail.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/product_detail.html
@@ -69,7 +69,6 @@
 						<p>([[${product.reviewCount}]] reviews)</p>
 					</div>
 				</div>
-				
 			</div>
 			
 		</div>
@@ -94,11 +93,48 @@
 	</div>
 </div>
 
+<div class="row">
+	<div class="col-sm-1"></div>
+	<div class="col-sm-10">
+		<hr>
+		<h3>Customer Reviews</h3>
+		<div class="text-center">
+			<input type="text" class="product-detail-rating-star" dir="ltr" data-size="lg" 
+				th:value="${product.averageRating}" />
+			<p>([[${product.reviewCount}]] reviews)</p>
+			<div th:if="${customerReviewed}" class="col ">
+				<p>You already reviewed this product</p>
+			</div>
+			<div th:if=${customerCanReview} class="col">
+				<a class="btn btn-primary" th:href="@{'/write_review/product/' + ${product.id}}">Review Product</a>
+			</div>
+		</div>
+		<th:block th:each="review : ${listReviews}">
+		<div class="col border border-rounded mt-2">
+			<div class="row">
+				<div class="col-3 text-center">
+					<p class="pt-2"><b>[[${review.customer.firstName}]] [[${review.customer.lastName}]]</b></p>
+					<p>([[${review.reviewTime}]])</p>
+				</div>
+				<div class="col">
+					<input type="text" class="product-detail-rating-star" dir="ltr" data-size="sm" 
+						th:value="${review.rating}" />
+					<b>[[${review.heading}]]</b>
+					<p>[[${review.comment}]]</p>
+				</div>
+			</div>
+		</div>
+		</th:block>
+		<div class="text-center pt-3"><a th:href="@{'/reviews/' + ${product.endURL}}">View all reviews</a></div>
+	</div>
+	<div class="col-sm-1"></div>
+</div>
+
 <div class="row mb-3">
 	<div class="col-sm-1"></div>
 	<div class="col-sm-10">
 		<hr>
-		<h4>Product you may like</h4>
+		<h3>Product you may like</h3>
 		<div class="row">
 			<div class="col-3">
 				<div class="d-flex flex-column align-items-center justify-content-center border rounded" style="height:420px">
