--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/review_success.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/review_success.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="header :: page_head('Order Completed')"></head>
+<head th:replace="header :: page_head('Success')"></head>
 <body>
 
 <div th:replace="navbar :: navbar"></div>
 
-<div class="text-center pt-2"><h2>Order Completed</h2></div>
+<div class="text-center pt-2"><h2>Your review has been posted!</h2></div>
 
 <div class="row mb-4">
 	<div class="col-1"></div>
