--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/footer.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/footer.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment = "footer">
-	<div class="mw-100 d-flex flex-fill bg-light">
-		<div class="w-25 ml-4 text-center">
+	<div class="row bg-light">
+		<div class="col-4 text-center">
 			<p> <b><u>Showroom:</u></b> </p>
 			<p> 170 Tran Quang Dieu Street, An Thoi Ward, Binh Thuy District, Can Tho City</p>
 			<div>
@@ -14,14 +14,14 @@
 			</div>
 		</div>
 		
-		<div class="w-25 text-center">
+		<div class="col-4 text-center">
 			<p><b><u>Hotline</u></b></p>
 			<p><b> (+84) 946.924.977 </b></p>
 			<p><b> (+84) 123.456.789 </b></p>
 			<p> (8 A.M to 10 P.M - everyday) </p>
 		</div>
 		
-		<div class="w-25 text-center">
+		<div class="col-4 text-center">
 			<p><b><u>Community</u></b></p>
 			<div class="text-center">
 				<i class="fab fa-facebook"></i>
@@ -31,13 +31,11 @@
 				<i class="fab fa-youtube"></i>
 				<a href="https://www.youtube.com/">Youtube</a>
 			</div>
+			<div class="text-center">
+				<i class="fab fa-twitter"></i>
+				<a href="https://twitter.com/">Twitter</a>
+			</div>
 			
-		</div>
-		
-		<div class="w-25 mr-4 text-center">
-			<p><b><u>Chatbot</u></b></p>
-			<p>Quick and smart. Chat with our visual assistant now!<p>
-			<a href="http://localhost:8000/chatroom.html" target="_blank">Rasa Chatbot</a>
 		</div>
 	</div>
 </div>
