--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/review_form.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/review_form.html
@@ -33,7 +33,7 @@
 				<p class="h5">Content</p>
 				<textarea rows="4" type="text" th:field="*{comment}" class="form-control" required minlength="4" maxlength="600"></textarea>
 			</div>
-			<p class="text-center"><input type="submit" value="Post Comment" class="btn btn-primary" /></p>
+			<p class="text-center"><input type="submit" value="Post Review" class="btn btn-primary" /></p>
 		</form>
 	</div>
 	<div class="col-3"></div>
