--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/reports.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/reports.html
@@ -23,12 +23,13 @@
 	</ul>
 
 	<div class="tab-content">
+		
 		<div class="tab-pane active pl-3 pr-3 pt-4" id="date" role="tabpanel">
 			<div>
 				<div>
-					<button class="btn btn-primary"> Last 7 days</button>
+					<button class="btn btn-primary">Last 7 days</button>
 				</div>
-				<div id="chart_by_date" class="mt-3"></div>
+				<div id="chart_sales_by_date" class="mt-3"></div>
 				<div class="row">
 					<div class="col-2">
 						<div class="card">
@@ -75,72 +76,21 @@
 		</div>
 	</div>
 </div>
+
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <script type="text/javascript">
-contextPath = "[[@{/}]]";
-$(document).ready(function(){
-	google.charts.load('current', {'packages': ['corechart']});
-	google.charts.setOnLoadCallback(loadSalesReportByDate);
-})
 
-var data;
-var chartOptions;
-var totalTotalSelling;
-var totalOrders;
-
-function loadSalesReportByDate() {
-	requestURL = contextPath + "report/sales_by_dates/last_7_days";
-	$.get(requestURL, function(responseJSON) {
-		prepareChartData();
-		customizeChart();
-		drawChart();
+	contextPath = "[[@{/}]]";
+	$(document).ready(function(){
+		google.charts.load('current', {'packages': ['corechart']});
+		google.charts.setOnLoadCallback(loadSalesReportByDate);
 	});
 	
-function prepareChartData(responseJSON) {
-	data = new google.visualization.DataTable();
-	data.addColumn('string', 'Date');
-	data.addColumn('number', 'Total Selling');
-	data.addColumn('number', 'Orders');
 	
-	$.each(responseJSON, function(index, reportItem) {
-		data.addRows([[reportItem.identifier, reportItem.totalSelling, reportItem.orderCount]])
-		totalTotalSelling += parseFloat(reportItem.totalSelling);
-		totalOrders += parseFloat(reportItem.orderCount);
-	});
-}
 
-function customizeChart() {
-	chartOptions = {
-		title: 'Last 7 days',
-		'height': 360,
-		legend:{position: 'top'},
-		series: {
-			0: {targetAxisIndex: 0},
-			1: {targetAxisIndex: 0},
-			2: {targetAxisIndex: 1},
-		},
-		
-		vAxes: {
-			0: {title: 'Amount', format: 'currency'},
-			1: {title: 'Numbers of Orders'}
-		}
-	};
-	
-	var formatter = new google.visualization.NumberFormat({
-		prefix: '$'
-	});
-	
-	formatter.format(data, 1);
-	formatter.format(data, 2);
-}
-
-function drawChart() {
-	var chart = new new google.visualization.ColumnChart(document.getElementById('chart_by_date'));
-	chart.draw(data, chartOptions);
-}
-
-}
 </script>
 <script th:src="@{/js/all.js}"></script>
+<script th:src="@{/js/reports.js}"></script>
 </body>
 </html>
