--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/login.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/login.html
@@ -16,79 +16,63 @@
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
-	<div class="d-flex">
-		<nav class="navbar navbar-expand-lg bg-light navbar-light">
-			<a class="navbar-brand" th:href="@{/}"> 
-				<img th:src="@{/images/ComputerStoreLogo.png}" />
-			</a>
-			
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-				<span class="navbar-toggler-icon"></span>			
-			</button>
-			
-			<div class="collapse navbar-collapse" id="topNavbar">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/programs}">Special Programs</a>
-					</li>
-					
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" href="http://localhost:8000/chatroom.html"
-						 target="_blank">Chat with us</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		
-		<div class="d-flex">
-			<nav class="navbar navbar-expand-lg bg-light">
-				<div class="collapse navbar-collapse" id="searchNavbar">
-					<form class="form-inline" th:action="@{/search}" method="get">
-						<input type="search" name="keyword" class="form-control mr-sm-2" th:value="${searchKeyword}" 
-							style="width: 350px" placeholder="Search..." required/>
-						<input type="submit" class="btn btn-outline-success" value="Search" />
-					</form>
-				</div>
-			</nav>
+<div th:replace="navbar :: navbar"></div>
+<div class="text-center p-4">
+</div>
+
+<form th:action="@{/login}" method="post" style="max-width: 450px; margin: 0 auto">
+	<div class="border border-primary rounded p-3">
+		<div class="d-flex justify-content-center pb-3">
+			<img th:src="@{images/ComputerStorelogo.png}" />
 		</div>
-		<div class="mw-100 d-flex flex-fill bg-light">
-			
-		</div>
+		<p>
+			<input type="email" name="email" class="form-control" placeholder="Enter your email" required/>
+		</p>
+		<p>
+			<input type="password" name="password" class="form-control" placeholder="Enter your password" required/>
+		</p>
+		<p class="text-center">
+			<input type="submit" value="Login" class="btn btn-primary" />
+		</p>
 	</div>
-	<div class="text-center p-4">
-	</div>
-	
-	<form th:action="@{/login}" method="post" style="max-width: 450px; margin: 0 auto">
-		<div class="border border-primary rounded p-3">
-			<div class="d-flex justify-content-center pb-3">
-				<img th:src="@{images/ComputerStorelogo.png}" />
-			</div>
-			<p>
-				<input type="email" name="email" class="form-control" placeholder="Enter your email" required/>
-			</p>
-			<p>
-				<input type="password" name="password" class="form-control" placeholder="Enter your password" required/>
-			</p>
-			<p class="text-center">
-				<input type="submit" value="Login" class="btn btn-primary" />
-			</p>
-		</div>
-	</form>
-	
-	<div th:if="${param.error}">
-		<p class="text-danger text-center">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
-	</div>
-	<div th:if="${param.logout}">
-		<p class="text-danger text-center">Logged out!</p>
-	</div>
-	
-	<div class="text-center pt-4">
-		<span>New to ComputerStore? <a th:href="@{/register}"> Sign up </a></span>
-	</div>
-	
-	<div class="p-3"></div>
-	
-	<div th:replace="footer :: footer"></div>
+</form>
+
+<div th:if="${param.error}">
+	<p class="text-danger text-center">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+</div>
+<div th:if="${param.logout}">
+	<p class="text-danger text-center">Logged out!</p>
+</div>
+
+<div class="text-center pt-4">
+	<span>New to ComputerStore? <a th:href="@{/register}"> Sign up </a></span>
+</div>
+
+<div class="p-3"></div>
+
+<script>!(function () {
+           let e = document.createElement("script"),
+             t = document.head || document.getElementsByTagName("head")[0];
+           (e.src =
+             "https://cdn.jsdelivr.net/npm/rasa-webchat/lib/index.js"),
+             // Replace 1.x.x with the version that you want
+             (e.async = !0),
+             (e.onload = () => {
+               window.WebChat.default(
+                 {
+                   initPayload: '/greet',
+                   customData: { language: "en" },
+                   socketUrl: "http://localhost:5005",
+                   // add other props here
+                 },
+                 null
+               );
+             }),
+             t.insertBefore(e, t.firstChild);
+         })();
+         </script>
+
+<div th:replace="footer :: footer"></div>
 	
 </body>
 </html>
