--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/navbar.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/navbar.html
@@ -8,7 +8,7 @@
 			<input type="submit"/>
 		</form>
 		<nav class="navbar navbar-expand-lg bg-light navbar-light">
-			<a class="navbar-brand" th:href="@{/}"> 
+			<a class="navbar-brand" th:href="@{/}" style="margin-left: 40px"> 
 				<img th:src="@{/images/ComputerStoreLogo.png}" />
 			</a>
 			
@@ -18,14 +18,18 @@
 			
 			<div class="collapse navbar-collapse" id="topNavbar">
 				<ul class="navbar-nav">
+					<!-- 
 					<li class="nav-item">
 						<a class="nav-link font-weight-bold" th:href="@{/programs}">Special Programs</a>
 					</li>
+					
+					
 					
 					<li class="nav-item">
 						<a class="nav-link font-weight-bold" href="http://localhost:8000/chatroom.html"
 						 target="_blank">Chat with us</a>
 					</li>
+					 -->
 				</ul>
 			</div>
 		</nav>
@@ -33,7 +37,7 @@
 		<div class="d-flex">
 			<nav class="navbar navbar-expand-lg bg-light">
 				<div class="collapse navbar-collapse" id="searchNavbar">
-					<form class="form-inline" th:action="@{/search/page/1}" method="get">
+					<form class="form-inline" th:action="@{/search/page/1}" method="get" style="margin-left: 230px">
 						<input type="search" name="keyword" class="form-control mr-sm-2" th:value="${searchKeyword}" 
 							style="width: 350px" placeholder="Search..." required/>
 						<input type="submit" class="btn btn-outline-success" value="Search" />
