--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/checkout.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/checkout.html
@@ -66,6 +66,7 @@
 	<div class="col-3"></div>
 </div>
 
+
 <div class="row mb-4">
 	<div class="col-1"></div>
 	<div class="col-10"><hr></div>
@@ -77,5 +78,6 @@
 </body>
 <script th:src="@{/js/all.js}"></script>
 <script th:src="@{/js/jquery.number.min.js}"></script>
-<script type="text/javascript"></script>
+<script type="text/javascript">
+</script>
 </html>
